--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -137,22 +137,39 @@
 }
 
 @article{keenan1977,
-  title={Noun phrase accessibility and universal grammar},
-  author={Keenan, Edward L and Comrie, Bernard},
-  journal={Linguistic inquiry},
-  volume={8},
-  number={1},
-  pages={63--99},
-  year={1977},
-  publisher={JSTOR}
+  title = {Noun phrase accessibility and universal grammar},
+  author = {Keenan, Edward L and Comrie, Bernard},
+  journal = {Linguistic inquiry},
+  volume = {8},
+  number = {1},
+  pages = {63--99},
+  year = {1977}
 }
 
 @inproceedings{arregi2004,
-  title={Restructuring in Basque and the theory of agreement},
-  author={Arregi, Karlos and Molina-Azaola, Gainko},
-  booktitle={Proceedings of WCCFL},
-  volume={23},
-  pages={101--114},
-  year={2004},
-  organization={Citeseer}
+  title = {Restructuring in Basque and the theory of agreement},
+  author = {Arregi, Karlos and Molina-Azaola, Gainko},
+  booktitle = {Proceedings of the 23rd West Coast Conference on Formal Linguistics},
+  pages = {43--56},
+  year = {2004},
+  editor = {Vineeta Chand, Ann Kelleher, Angelo J. Rodríguez and Benjamin Schmeiser},
+  address = {Somerville, MA},
+  publisher = {Cascadilla Press}
+}
+
+
+@book{einarsson1949,
+  title = {Icelandic: grammar, texts, glossary},
+  author = {Einarsson, Stefán},
+  year = {1949},
+  publisher = {The Johns Hopkins Press},
+  adress = {Baltimore}
+}
+
+@book{timberlake2004,
+  title = {A reference grammar of Russian},
+  author = {Timberlake, Alan},
+  year = {2004},
+  publisher = {Cambridge University Press},
+  adress = {New York}
 }
