--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -25,7 +25,7 @@ I placed subscripts between the square brackets on the glosses of verbs. They in
 
 In this example the predicate \tit{matjai} `eats' combines with a nominative subject in the relative clause. In other words, the internal case is nominative. The predicate \tit{gadauþnai} `die' in the main clause also combines with a nominative subject. In other words, the external case is nominative. The relative pronoun \tit{sa} `who.\tsc{nom}' appears in nominative case.
 
-\exg.[ei [sa -ei þis matjai,] ni gadauþnai]\\
+\exg. [ei [sa -ei þis matjai,] ni gadauþnai]\\
  that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
  `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
 
@@ -78,50 +78,70 @@ Schematically, this looks like:
 
 In what follows I discuss the pattern that occurs when the internal and external case differs.
 
-Internal case is nominative, external case is accusative.
+First, consider a situation in which the internal case is nominative and the external case is accusative. An attested example of that is given in  \ref{ex:gothicnomacc}. Internal to the relative clause, the predicate \tit{ist us Laudeikaion} `is from Laodicea' requires a subject in nominative case. External to the relative clause, \tit{ussiggwaid} `read' requires its object to be in accusative. In the example, the relative pronoun \tit{þo} `what.\tsc{acc}' appears in accusative case. There are no examples of headless relatives with nominative as internal case and accusative as external case and a relative pronoun in nominative.
 
-\exg. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
- and what.\ac{acc} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}
+\exg. [ jah [ þo -ei ist us Laudeikaion ] jus ussiggwaid ]\\
+ {} and {} what.\ac{acc} -\ac{comp} is from Laodicea \scsub{[nom]} you read \scsub{[acc]}\\
+ `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}\label{ex:gothicnomacc}
 
-Internal case is nominative, external case is dative.
+Consider a situation in which the internal case is nominative and the external case is dative. An attested example of that is given in  \ref{ex:gothicnomdat}. Internal to the relative clause, the predicate \tit{iupa sind} `are above' requires a subject in nominative case. External to the relative clause, \tit{fraþjaiþ} `think on' requires its object to be in dative. In the example, the relative pronoun \tit{þaim} `what.\tsc{dat}' appears in dative case. There are no examples of headless relatives with nominative as internal case and dative as external case and a relative pronoun in nominative.
 
-\exg. [þaim -ei iupa sind] fraþjaiþ\\
- what.\ac{dat} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
- `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, after \pgcitealt{harbert1978}{339}}
+\exg. [ [ þaim -ei iupa sind ] fraþjaiþ ]\\
+ {} {} what.\ac{dat} -\ac{comp} above are \scsub{[nom]} {think on} \scsub{[dat]}\\
+ `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, after \pgcitealt{harbert1978}{339}}\label{ex:gothicnomdat}
 
-Internal case is accusative, external case is nominative.
+Consider a situation in which the internal case is accusative and the external case is nominative. An attested example of that is given in  \ref{ex:gothicaccnom}. Internal to the relative clause, \tit{frijos} `love' requires its object to be in accusative. External to the relative clause, the predicate \tit{siuks ist} `is sick' requires a subject in nominative case. In the example, the relative pronoun \tit{þan(a)} `who.\tsc{acc}' appears in accusative case. There are no examples of headless relatives with accusative as internal case and nominative as external case and a relative pronoun in nominative.
 
-\exg. [þan -ei frijos] siuks ist\\
- who.\ac{acc} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}
+\exg. [ [ þan -ei frijos ] siuks ist ]\\
+ {} {} who.\ac{acc} -\ac{comp} love \scsub{[acc]} sick is \scsub{[nom]}\\
+ `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}\label{ex:gothicaccnom}
 
-Internal case is accusative, external case is dative.
+Consider a situation in which the internal case is accusative and the external case is dative. An attested example of that is given in  \ref{ex:gothicaccdatrep}, repeated from the introduction. Internal to the relative clause, \tit{qiþiþ} `say' requires its object to be in accusative. External to the relative clause, \tit{taujau} `do' requires its direct object to be in dative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with accusative as internal case and dative as external case and a relative pronoun in accusative.
 
-\exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
- what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
+\exg. [ hva nu wileiþ ei taujau [ þamm -ei qiþiþ þiudan Iudaie ] ] ?\\
+ {} what now want that do {} who.\ac{dat} -\ac{comp} say king {of Jews} \scsub{[acc]} \scsub{[dat]}\\
+ `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccdatrep}
 
-Internal case is dative, external case is nominative.
+Consider a situation in which the internal case is dative and the external case is nominative. An attested example of that is given in  \ref{ex:gothicdatnom}. Internal to the relative clause, \tit{fraletada} `is forgiven' requires its object to be in dative. External to the relative clause, the predicate \tit{frijod} `loves' requires a subject in nominative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with dative as internal case and nominative as external case and a relative pronoun in nominative.
 
-\exg. iþ [þamm -ei leitil fraletada] leitil frijod\\
- but who.\ac{dat} -\ac{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
- `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}
+\exg. [ iþ [ þamm -ei leitil fraletada ] leitil frijod ]\\
+ {} but {} who.\ac{dat} -\ac{comp} little {is forgiven} \scsub{[dat]} little loves \scsub{[nom]}\\
+ `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}\label{ex:gothicdatnom}
 
-Internal case is dative, external case is accusative.
+Consider a situation in which the internal case is dative and the external case is accusative. An attested example of that is given in  \ref{ex:gothicdataccrep}, repeated from the introduction. Internal to the relative clause, the preposition \tit{ana} `on' requires its complement to be in dative. External to the relative clause, \tit{ushafjands} `picking up' requires its object to be in accusative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with dative as internal case and accusative as external case and a relative pronoun in accusative.
 
-\ex. ushafjands [ana þamm -ei lag]\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\ac{comp} lay\\
- `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
+\ex. [ ushafjands [ ana þamm -ei lag ] ]\\
+ {picking up} on what.\ac{dat} -\ac{comp} lay \scsub{[dat]} \scsub{[acc]}\\
+ `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicdataccrep}
 
-\footnote{Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that they examples are ungrammatical.}
+A summary of the data is given in Table \ref{tbl:summarygothic}. The left column gives the internal case between square brackets. The upper row indicates the external case between square brackets.
+The other cells show the case in of the relative pronoun. In the diagonal there is only a single case. These are the headless relatives in which the internal case is identical to the external case. The relative pronoun is grammatical and marked dark gray. they correspond to the examples x, y and z.
+Six cells show internal and external case differ. The lower left corner shows the internal case pronoun. The upper right corner shows the external case pronoun. The grammatical ones are marked in light gray. The unattested examples are marked with an asterix, and are not marked.\footnote{
+Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
+}
+The pattern we see is that outer guys are grammatical.
 
-\input{tables/gothic-grammaticality.tex}
 
-\ex.
+\begin{table}[H]
+  \center
+  \caption {Summary of Gothic headless relative data}
+    \input{tables/gothic-grammaticality.tex}
+    \label{tbl:summarygothic}
+\end{table}
+
+
+In sum, the situation can be summarized as in \ref{ex:competition1by1}. In a competition, accusative and dative win over nominative. Additionally, dative wins over accusative.
+
+\ex.\label{ex:competition1by1}
 \a. \tsc{acc} wins over \tsc{nom}
 \b. \tsc{dat} wins over \tsc{nom}
 \b. \tsc{dat} wins over \tsc{acc}
+
+Formulated in a scale of `case strength':
+
+\ex. \tsc{nom} -- \tsc{acc} -- \tsc{dat}\label{ex:casestrength}
+
+
 
 
 \section{Parallels in accessibility hierarchies}
@@ -324,10 +344,15 @@ In Basque, subjects, objects and indirect objects can be relativized with the sa
 
 
 
-\section{Behavior of the cases in morphology}
+\section{Case in morphology}
 
 
 \subsection{Suppletion patterns}
+
+Icelandic: \pgcitealt{einarsson1949}{68}
+Russian: \pgcitealt{timberlake2004}{117}
+Wardaman:
+Khinalugh:
 
 \begin{table}[H]
   \center
@@ -442,7 +467,7 @@ In Basque, subjects, objects and indirect objects can be relativized with the sa
 
 \begin{table}[H]
   \center
-	\caption {Transparent case containment in Khanty}
+	\caption {Case containment in Khanty}
 		\begin{tabular}{clll}
 		\toprule
               & \ac{1}\ac{sg}
@@ -467,7 +492,7 @@ In Basque, subjects, objects and indirect objects can be relativized with the sa
 
 \begin{table}[H]
   \center
-	\caption {Transparent case containment in Kalderaš Romani}
+	\caption {Case containment in Kalderaš Romani}
 		\begin{tabular}{cllll}
 		\toprule
               & `brother'
@@ -495,7 +520,7 @@ In Basque, subjects, objects and indirect objects can be relativized with the sa
 
 \begin{table}[H]
   \center
-	\caption {Transparent case containment in West Tocharian}
+	\caption {Case containment in West Tocharian}
 		\begin{tabular}{cll}
 		\toprule
               & `horses'
