--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -15,34 +15,34 @@ In this section I show the behavior of Gothic headless relatives in detail. I sy
 
 I repeat the headless relative from the introduction in which both predicates assign accusative case in \ref{ex:gothicaccaccrep}. The predicate in the relative clause \tit{arma} `pity' assigns accusative case. The predicate in the main clause \tit{gaarma} `pity' also assigns accusative case. The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.
 
-\exg. gaarma [þan -ei arma]\\
- pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+\exg. gaarma þan -ei arma\\
+ pity\scsub{[acc]} \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{pity\scsub{[acc]}}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
 
-From this section on I use the terms internal case and external case. Internal case refers to the case assigned internal to the relative clause. In \ref{ex:gothicaccaccrep}, the internal case is assigned by \tit{arma} `pity'. The external case refers to the case assign external to the relative clause, so the main clause. In \ref{ex:gothicaccaccrep}, the external case is assigned by \tit{gaarma} `pity'.
-
-I placed subscripts between the square brackets on the glosses of verbs. They indicate which case the predicate requires from the relative pronoun. For \ref{ex:gothicaccaccrep} this simply means which case the verb assigns to its object. Another possibility is that the subscript is placed on a preposition and refer to the case the preposition assigns. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in. An example of that is given in \ref{ex:gothicnomnom}.
+% From this section on I use the terms internal case and external case. Internal case refers to the case assigned internal to the relative clause. In \ref{ex:gothicaccaccrep}, the internal case is assigned by \tit{arma} `pity'. The external case refers to the case assign external to the relative clause, so the main clause. In \ref{ex:gothicaccaccrep}, the external case is assigned by \tit{gaarma} `pity'.
+%
+% I placed subscripts between the square brackets on the glosses of verbs. They indicate which case the predicate requires from the relative pronoun. For \ref{ex:gothicaccaccrep} this simply means which case the verb assigns to its object. Another possibility is that the subscript is placed on a preposition and refer to the case the preposition assigns. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in. An example of that is given in \ref{ex:gothicnomnom}.
 
 In this example the predicate \tit{matjai} `eats' combines with a nominative subject in the relative clause. In other words, the internal case is nominative. The predicate \tit{gadauþnai} `die' in the main clause also combines with a nominative subject. In other words, the external case is nominative. The relative pronoun \tit{sa} `who.\tsc{nom}' appears in nominative case.
 
-\exg. [ei [sa -ei þis matjai,] ni gadauþnai]\\
- that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
+\exg. ei sa -ei þis matjai, ni gadauþnai\\
+ that \tcol{DG}{who.\ac{nom}} \tcol{DG}{-\ac{comp}} \tcol{DG}{{of this}} \tcol{DG}{eats\scsub{[nom]}} not die\scsub{[nom]}\\
  `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
 
 In the examples below, the internal case and external case are dative.
 
 \ex.
-\ag. [þamm -ei gabaur] gabaur\\
- who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+\ag. þamm -ei gabaur gabaur\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{tribute\scsub{[dat]}} tribute\scsub{[dat]}\\
  `tribute to (him) whom tribute is due'
-\bg. [þamm -ei mota] mota\\
- who.\ac{dat} -\ac{comp} custom\scsub{[dat]} custom\scsub{[dat]}\\
+\bg. þamm -ei mota mota\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{custom\scsub{[dat]}} custom\scsub{[dat]}\\
  `custom to (him) whom custom is due'
-\bg. [þamm -ei agis] agis\\
- who.\ac{dat} -\ac{comp} fear\scsub{[dat]} fear\scsub{[dat]}\\
+\bg. þamm -ei agis agis\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{fear\scsub{[dat]}} fear\scsub{[dat]}\\
  `fear to (him) whom fear is due'
-\bg. [þamm -ei sweriþa] sweriþa\\
- who.\ac{dat} -\ac{comp} honour\scsub{[dat]} honour\scsub{[dat]}\\
+\bg. þamm -ei sweriþa sweriþa\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{honour\scsub{[dat]}} honour\scsub{[dat]}\\
  `honour to (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatdat}
 
 Schematically, this looks like:
@@ -80,39 +80,39 @@ In what follows I discuss the pattern that occurs when the internal and external
 
 First, consider a situation in which the internal case is nominative and the external case is accusative. An attested example of that is given in  \ref{ex:gothicnomacc}. Internal to the relative clause, the predicate \tit{ist us Laudeikaion} `is from Laodicea' requires a subject in nominative case. External to the relative clause, \tit{ussiggwaid} `read' requires its object to be in accusative. In the example, the relative pronoun \tit{þo} `what.\tsc{acc}' appears in accusative case. There are no examples of headless relatives with nominative as internal case and accusative as external case and a relative pronoun in nominative.
 
-\exg. [ jah [ þo -ei ist us Laudeikaion ] jus ussiggwaid ]\\
- {} and {} what.\ac{acc} -\ac{comp} is from Laodicea \scsub{[nom]} you read \scsub{[acc]}\\
+\exg. jah þo -ei ist us Laudeikaion jus ussiggwaid\\
+ and what.\ac{acc} \tcol{DG}{-\ac{comp}} \tcol{DG}{is\scsub{[nom]}} \tcol{DG}{from} \tcol{DG}{Laodicea} you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}\label{ex:gothicnomacc}
 
 Consider a situation in which the internal case is nominative and the external case is dative. An attested example of that is given in  \ref{ex:gothicnomdat}. Internal to the relative clause, the predicate \tit{iupa sind} `are above' requires a subject in nominative case. External to the relative clause, \tit{fraþjaiþ} `think on' requires its object to be in dative. In the example, the relative pronoun \tit{þaim} `what.\tsc{dat}' appears in dative case. There are no examples of headless relatives with nominative as internal case and dative as external case and a relative pronoun in nominative.
 
-\exg. [ [ þaim -ei iupa sind ] fraþjaiþ ]\\
- {} {} what.\ac{dat} -\ac{comp} above are \scsub{[nom]} {think on} \scsub{[dat]}\\
+\exg. þaim -ei iupa sind fraþjaiþ \\
+ what.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{above} \tcol{DG}{are\scsub{[nom]}} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, after \pgcitealt{harbert1978}{339}}\label{ex:gothicnomdat}
 
 Consider a situation in which the internal case is accusative and the external case is nominative. An attested example of that is given in  \ref{ex:gothicaccnom}. Internal to the relative clause, \tit{frijos} `love' requires its object to be in accusative. External to the relative clause, the predicate \tit{siuks ist} `is sick' requires a subject in nominative case. In the example, the relative pronoun \tit{þan(a)} `who.\tsc{acc}' appears in accusative case. There are no examples of headless relatives with accusative as internal case and nominative as external case and a relative pronoun in nominative.
 
-\exg. [ [ þan -ei frijos ] siuks ist ]\\
- {} {} who.\ac{acc} -\ac{comp} love \scsub{[acc]} sick is \scsub{[nom]}\\
+\exg. þan -ei frijos siuks ist\\
+ \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{love\scsub{[acc]}} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}\label{ex:gothicaccnom}
 
 Consider a situation in which the internal case is accusative and the external case is dative. An attested example of that is given in  \ref{ex:gothicaccdatrep}, repeated from the introduction. Internal to the relative clause, \tit{qiþiþ} `say' requires its object to be in accusative. External to the relative clause, \tit{taujau} `do' requires its direct object to be in dative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with accusative as internal case and dative as external case and a relative pronoun in accusative.
 
-\exg. [ hva nu wileiþ ei taujau [ þamm -ei qiþiþ þiudan Iudaie ] ] ?\\
- {} what now want that do {} who.\ac{dat} -\ac{comp} say king {of Jews} \scsub{[acc]} \scsub{[dat]}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccdatrep}
+\exg. hva nu wileiþ ei taujau þamm -ei qiþiþ þiudan Iudaie?\\
+ what now want that do\scsub{[dat]} who.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{say\scsub{[acc]}} \tcol{DG}{king} \tcol{DG}{{of Jews}}\\
+ `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdataccrep}
 
 Consider a situation in which the internal case is dative and the external case is nominative. An attested example of that is given in  \ref{ex:gothicdatnom}. Internal to the relative clause, \tit{fraletada} `is forgiven' requires its object to be in dative. External to the relative clause, the predicate \tit{frijod} `loves' requires a subject in nominative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with dative as internal case and nominative as external case and a relative pronoun in nominative.
 
-\exg. [ iþ [ þamm -ei leitil fraletada ] leitil frijod ]\\
- {} but {} who.\ac{dat} -\ac{comp} little {is forgiven} \scsub{[dat]} little loves \scsub{[nom]}\\
+\exg. iþ þamm -ei leitil fraletada leitil frijod\\
+ but \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{little} \tcol{DG}{{is forgiven}\scsub{[dat]}} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}\label{ex:gothicdatnom}
 
 Consider a situation in which the internal case is dative and the external case is accusative. An attested example of that is given in  \ref{ex:gothicdataccrep}, repeated from the introduction. Internal to the relative clause, the preposition \tit{ana} `on' requires its complement to be in dative. External to the relative clause, \tit{ushafjands} `picking up' requires its object to be in accusative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with dative as internal case and accusative as external case and a relative pronoun in accusative.
 
-\ex. [ ushafjands [ ana þamm -ei lag ] ]\\
- {picking up} on what.\ac{dat} -\ac{comp} lay \scsub{[dat]} \scsub{[acc]}\\
- `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicdataccrep}
+\exg. ushafjands ana þamm -ei lag\\
+ {picking up}\scsub{[acc]} \tcol{DG}{on\scsub{[dat]}} \tcol{DG}{what.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{lay}\\
+ `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdatrep}
 
 A summary of the data is given in Table \ref{tbl:summarygothic}. The left column gives the internal case between square brackets. The upper row indicates the external case between square brackets.
 The other cells show the case in of the relative pronoun. In the diagonal there is only a single case. These are the headless relatives in which the internal case is identical to the external case. The relative pronoun is grammatical and marked dark gray. they correspond to the examples x, y and z.
@@ -347,64 +347,15 @@ In Basque, subjects, objects and indirect objects can be relativized with the sa
 \section{Case in morphology}
 
 
-\subsection{Suppletion patterns}
-
-Icelandic: \pgcitealt{einarsson1949}{68}
-Russian: \pgcitealt{timberlake2004}{117}
-Wardaman:
-Khinalugh:
-
-\begin{table}[H]
-  \center
-  \caption {Suppletion patterns}
-    \begin{tabular}{cccccccc}
-      \toprule
-          \multicolumn{3}{c}{pattern}
-            & \ac{nom}
-            & \ac{acc}
-            & \ac{dat}
-            & translation
-            & language \\
-      \cmidrule(lr){1-3} \cmidrule(lr){4-6} \cmidrule(lr){7-7} \cmidrule(lr){8-8}
-          A & A & A
-            & \cellcolor{LG}\tbf{þ}ú
-            & \cellcolor{LG}\tbf{þ}ig
-            & \cellcolor{LG}\tbf{þ}ér
-            & 2\ac{sg}
-            & Icelandic \\
-          A & B & B
-            & my
-            & \cellcolor{LG}\tbf{n}as
-            & \cellcolor{LG}\tbf{n}am
-            & 1\ac{pl}
-            & Russian \\
-          A & A & B
-            & \cellcolor{LG}\tbf{narnaj}
-            & \cellcolor{LG}\tbf{narnaj}(j)i
-            & gunga
-            & 3\ac{sg}
-            & Wardaman \\
-          A & B & C
-            & zɨ
-            & jä
-            & as(ɨr)
-            & 1\ac{sg}
-            & Khinalugh \\
-          A & B & A
-            & \cellcolor{LG}
-            &
-            & \cellcolor{LG}
-            &
-            & not attested \\
-      \bottomrule
-    \end{tabular}
-\end{table}
-
-
-
 
 
 \subsection{Syncretism patterns}
+
+Icelandic: \pgcitealt{einarsson1949}{68}
+Teribe: ?
+Lavukaleve: Yvonne?
+Khinalugh: Beata etc.
+
 
 \begin{table}[H]
   \center
@@ -431,11 +382,11 @@ Khinalugh:
             & 1\ac{pl}
             & Teribe \\
           A & A & B
-            & \cellcolor{LG}\tbf{sie}
-            & \cellcolor{LG}\tbf{sie}
-            & ihr
-            & 3\ac{sg}.\ac{f}
-            & German \\
+            & \cellcolor{LG}\tbf{það}
+            & \cellcolor{LG}\tbf{það}
+            & því
+            & 3\ac{pl}.\ac{n}
+            & Icelandic \\
           A & B & C
             & zɨ
             & jä
@@ -480,9 +431,9 @@ Khinalugh:
     \ac{acc}  & ma\tbf{:-ne:m}
               & luw\tbf{-e:l}
               & muŋ\tbf{-e:w}                           \\
-    \ac{dat}  & ma\tbf{:-ne:m}-\textcolor{DG}{\tbf{na}}
-              & luw\tbf{-e:l}-\textcolor{DG}{\tbf{na}}
-              & muŋ\tbf{-e:w}-\textcolor{DG}{\tbf{na}}  \\
+    \ac{dat}  & ma\tbf{:-ne:m}-\tcol{DG}{\tbf{na}}
+              & luw\tbf{-e:l}-\tcol{DG}{\tbf{na}}
+              & muŋ\tbf{-e:w}-\tcol{DG}{\tbf{na}}  \\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -508,10 +459,10 @@ Khinalugh:
               & phral-\tbf{én}
               & rakl-\tbf{já}
               & rakl-já-\tbf{n}                           \\
-    \ac{dat}  & phral-\tbf{és}-\textcolor{DG}{\tbf{kə}}
-              & phral-\tbf{én}-\textcolor{DG}{\tbf{gə}}
-              & rakl-\tbf{já}-\textcolor{DG}{\tbf{kə}}
-              & rakl-já-\tbf{n}-\textcolor{DG}{\tbf{gə}}  \\
+    \ac{dat}  & phral-\tbf{és}-\tcol{DG}{\tbf{kə}}
+              & phral-\tbf{én}-\tcol{DG}{\tbf{gə}}
+              & rakl-\tbf{já}-\tcol{DG}{\tbf{kə}}
+              & rakl-já-\tbf{n}-\tcol{DG}{\tbf{gə}}  \\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -530,8 +481,8 @@ Khinalugh:
               & eṅkwi                                  \\
     \ac{acc}  & yakwe-\tbf{ṃ}
               & eṅkwe-\tbf{ṃ}                          \\
-    \ac{dat}  & yäkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}}
-              & eṅkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}} \\
+    \ac{dat}  & yäkwe-\tbf{ṃ}-\tcol{DG}{\tbf{ts}}
+              & eṅkwe-\tbf{ṃ}-\tcol{DG}{\tbf{ts}} \\
 		\bottomrule
 		\end{tabular}
 \end{table}
