--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -173,3 +173,15 @@
   publisher = {Cambridge University Press},
   adress = {New York}
 }
+
+
+@incollection{moravcsik2009,
+  title={The distribution of case},
+  author={Moravcsik, Edith A},
+  booktitle={The Oxford handbook of case},
+  editor={Andrej Malchukov and Andrew Spencer},
+  pages={231–245},
+  year={2009},
+  adress={Oxford},
+  publisher={Oxford University Press}
+}
