--- a/introduction.tex
+++ b/introduction.tex
@@ -14,11 +14,12 @@ In this introduction I first introduce what I mean exactly with case competition
 
 \section{Introducing the title}
 
-First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
+% First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
-In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' is assigned nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' is assigned accusative case, because it is an object of \tit{mag} `likes'.
-In \ref{ex:germancase2}, the roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' is assigned nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' is assigned accusative case, because it is the object of \tit{mag} `likes'.
+
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:germancase}. Subjects of the predicate \tit{mag} `likes' are marked as nominative, and objects of \tit{mag} `likes' are marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is an object of \tit{mag} `likes'.
+In \ref{ex:germancase2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the object of \tit{mag} `likes'.
 The grammatical roles of the noun phrases in \ref{ex:germancase} can also be derived from the positioning in the clause. The subjects precede the predicate \tit{mag} `likes' and the objects follow it. As it is not relevant for the discussion here, I do not discuss the positioning of noun phrases in the clause into further detail.
 
 \ex.\label{ex:germancase}
@@ -29,51 +30,61 @@ The grammatical roles of the noun phrases in \ref{ex:germancase} can also be der
  the.\ac{nom} student likes the.\ac{acc}\\
  `the pupil likes the teacher.'\label{ex:germancase2}
 
-Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both consist of a main clause that is modified by a relative clause, which is placed between brackets.
-In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` is assigned accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' is assigned nominative case, because it is the subject of in the relative clause.
+Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both contain of a main clause that is modified by a relative clause. The glosses of the relative clause are marked in gray.
+In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the subject of in the relative clause.
 
-In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` is again marked as accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' is assigned accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
+In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
 \ex.\label{ex:germanrelatives}
-\ag. Der Lehrer mag den Schüler, [der nach draußen guckt].\\
- the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{nom} to outside looks\\
+\ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
+ the.\ac{nom} teacher likes the.\ac{acc} student \tcol{DG}{that.\ac{nom}} \tcol{DG}{to} \tcol{DG}{outside} \tcol{DG}{looks}\\
  `The teacher likes the pupil that is looking outside.'\label{ex:germanrelative1}
- \bg. Der Lehrer mag den Schüler, [den er beim Verstecktspiel sucht].\\
- the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he {at the} {hide-and-seek game} searches\\
+ \bg. Der Lehrer mag den Schüler, den er beim Verstecktspiel sucht.\\
+ the.\ac{nom} teacher likes the.\ac{acc} student \tcol{DG}{that.\ac{acc}} \tcol{DG}{he} \tcol{DG}{{at the}} \tcol{DG}{{hide-and-seek game}} \tcol{DG}{searches}\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
 
-Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head, it is nominative.
-
+Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} is nominative, because it is the subject in the relative clause. So, the case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head.
 
 The focus of this dissertation lies on the headless relative, i.e. a relative clause that does not have a head. As the name suggests, this type of relative clause lacks a head.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{himmelreich2017}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
-Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}. I placed subscripts between the square brackets on the glosses of verbs. They indicate which case the verbs assign to their object.
-In \ref{ex:gothicaccacc}, the relative clause \tit{þan -ei arma} `who I pity' is placed between square brackets. There is no head that this relative clause modifies, it is a headless relative. This is different from the examples from German I gave above, which each had a head.
-The relative pronoun \tit{þan(a)} `who.\ac{acc}' is assigned accusative case.\footnote{
+Consider the Gothic example of a headless relative in \ref{ex:gothicaccacc}. The relative clause is \tit{þan -ei arma} `who I pity'. There is no head that this relative clause modifies, it is a headless relative. This is different from the examples from German I gave above, which each had a head.
+The predicate \tit{arma} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarma} `pity' also takes accusative objects, indicated again by the subscript.
+The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
-\exg. gaarma [þan -ei arma]\\
- pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+\exg. gaarma þan -ei arma\\
+ pity\scsub{[acc]} \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{pity\scsub{[acc]}}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
-Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+
+%%%probeer dit hieronder aan elkaar te lullen%%%
+
+ Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+
+ - Discussing headless relatives, I use the terms internal and external case. Internal case refers to the case associated with the grammatical role the relative pronoun has internal to the relative clause. External case refers to the case associated with the grammatical role the non-existing head of the relative pronoun has external to the relative clause, so in the main clause. The question is what happens with this case. Is it lost because the noun is simply not there or does it go somewhere else?
+
+ - I places subscripts on the glosses of the predicates. They indicate which case the predicate requires from the relative pronoun. For \ref{ex:gothicaccaccrep} this simply means which case the verb assigns to its object. Another possibility is that the subscript is placed on a preposition and refer to the case the preposition assigns. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in. An example of that is given in \ref{ex:gothicnomnom}.
+
+
+
+
 
 In the remainder of this section I show evidence for the claim that there is case competition going on in headless relatives. I illustrate that relative pronouns can take the case assigned from within the relative clause or the case assigned from outside the relative clause (the main clause).
 
 Consider the example in \ref{ex:gothicaccdat}. In this example there is a subscript on a preposition, indicating that this is the element that assigns the case. The relative clause is placed between square brackets. The preposition \tit{ana} `on' is part of the relative clause, and it assigns dative case. The predicate \tit{ushafjands} `picking up' is not part of the relative clause but it is situated in the main clause. This predicate assigns accusative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the preposition \tit{ana} `on', which is part of the relative clause.
 
-\exg. [ ushafjands [ ana þamm -ei lag ] ]\\
- \phantom{x} {picking up} \phantom{x} on what.\ac{dat} -\ac{comp} lay \scsub{[dat]} \scsub{[acc]}\\
+\exg. ushafjands ana þamm -ei lag\\
+ {picking up}\scsub{[acc]} \tcol{DG}{on\scsub{[dat]}} \tcol{DG}{what.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{lay}\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
 
 The conclusion that follows is that in headless relatives the relative pronoun can take the case assigned within the relative clause. At this point it remains unclear what happened to the accusative case which is assigned by the predicate in the main clause.
 
 Now consider the example in \ref{ex:gothicdatacc}. The relative clause is placed between square brackets. The predicate \tit{qiþiþ} `say' is part of the relative clause, and assigns accusative case. The predicate \tit{taujau} `do' is not part of the relative clause but it is situated in the main clause. This predicate assign dative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the predicate \tit{taujau} `do', which is part of the main clause.
 
-\exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
- what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
+\exg. hva nu wileiþ ei taujau þamm -ei qiþiþ þiudan Iudaie?\\
+ what now want that do\scsub{[dat]} who.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{say\scsub{[acc]}} \tcol{DG}{king} \tcol{DG}{{of Jews}}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatacc}
 
 The conclusion that follows is that in headless relatives the relative pronoun takes the case assigned in the main clause. Again, it is unclear at this point what happened to the accusative case, which is now assigned by the predicate in the relative clause.
